objects/Staff_Profile_Attribute_Association__c.object
<CustomObject>
    <fields>
        <fullName>Shift_UQ_Profile_ID_Attribute_ID__c</fullName>
        <description>The unique key for Staff Profile Attribute Associations.  It&apos;s set in a beforeInsert/Update trigger to &lt;StaffProfileId&gt;:&lt;StaffProfileAttributeId&gt;.</description>
        <inlineHelpText>The unique key for Staff Profile Attribute Associations.  It&apos;s set in a beforeInsert/Update trigger to &lt;StaffProfileId&gt;:&lt;StaffProfileAttributeId&gt;.</inlineHelpText>
        <label>Shift UQ Profile_ID Attribute_ID</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Skedulo_Resource_Tag_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skedulo Resource Tag</label>
        <referenceTo>sked__Resource_Tag__c</referenceTo>
        <relationshipLabel>Staff Profile Attribute Associations</relationshipLabel>
        <relationshipName>Staff_Profile_Attribute_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Profile_Attribute_ID__c</fullName>
        <label>Staff Profile Attribute</label>
        <referenceTo>Staff_Profile_Attribute__c</referenceTo>
        <relationshipLabel>Staff Profile Attribute Associations</relationshipLabel>
        <relationshipName>Staff_Profile_Attribute_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Staff_Profile_ID__c</fullName>
        <label>Staff Profile</label>
        <referenceTo>Staff_Profile__c</referenceTo>
        <relationshipLabel>Staff Profile Attribute Associations</relationshipLabel>
        <relationshipName>Staff_Profile_Attribute_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Staff Profile Attribute Association</label>
    <nameField>
        <label>Staff Profile Attribute Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Profile Attribute Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>